[project]
name = "keeping"
version = "0.1.0"
description = "Home Bookkeeping"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=6.0.2",
    "django-crispy-forms>=2.5",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "django-vanilla-views>=3.0.0",
    "django-widget-tweaks>=1.5.1",
    "mysqlclient>=2.2.8",
    "pillow>=12.1.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "python-dateutil>=2.9.0.post0",
    "django-cotton>=2.6.1",
    "numpy>=2.4.2",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4.6",
    "django-override-storage>=0.3.2",
    "django-test-plus>=2.2.4",
    "django-test-without-migrations>=0.6",
    "django-webtest>=1.9.12",
    "hypothesis>=6.119.3",
    "mock>=5.1.0",
    "pyinstrument>=5.0.0",
    "pytest-forked>=1.6.0",
    "pytest>=8.3.3",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.0.0",
    "pytest-diff>=0.1.14",
    "pytest-django>=4.9.0",
    "pytest-factoryboy>=2.7.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.14.0",
    "pytest-raises>=0.11",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "pytz>=2024.2",
    "selenium>=4.26.1",
    "time-machine>=2.16.0",
    "webdriver-manager>=4.0.2",
    "ruff>=0.13.0",
    "django-silk>=5.3.2",
    "pytest-picked>=0.5.1",
]
production = [
    "gunicorn>=23.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "N",
    "R",
    "I",
]
